# Sssnake

./: .gitmodules  LICENSE  LICENSES.txt  README.md  __main__.py  pyproject.toml
.github/workflows/: ci.yml
sssnake/: __init__.py
sssnake/core/: app.py  env_candies.py  env_collision.py  env_config.py  env_engine.py  env_helpers.py  env_renderer.py  env_schema.py  env_types.py
sssnake/core/controls/: game_controls.py
sssnake/core/env/: env_candies.py  env_collision.py  env_engine.py  env_helpers.py  env_renderer.py  env_schema.py  env_types.py
sssnake/core/env_engine/: env_engine.py
sssnake/core/game/: game_controls.py  game_loop.py
sssnake/core/rendering/: canvas_corners_masking.py  game_renderer.py  renderer.py
sssnake/env/: __init__.py
sssnake/env/core/: candies.py  collision.py  env_engine.py  renderer.py
sssnake/env/utils/: config_def.py  env_helpers.py  schema.py  snake_action.py  state_def.py
sssnake/game/: __main__.py  app.py  game_config.py  lifecycle_manager.py
sssnake/game/controls/: game_controls.py  game_loop.py
sssnake/game/ui/: renderer.py  views.py
sssnake/ui/: app.py  views.py
sssnake/utils/: config.py  default_params.json  env_config.py  theme_loader.py
tests/: conftest.py  test_candies.py  test_collision.py  test_envengine.py  test_renderer.py
tests/input_data/: default_params.json  params_map.json
