[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sssnake"
version = "1.0.0"
description = "RL-compatible snake environment + optional game interface"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Adam Malinowski", email = "adam@poranny.it" },
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "numpy>=1.22",
  "gymnasium>=1.1.1",
  "Pillow>=9.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.9",
  "black>=25.1.0",
  "mypy>=1.15.0"
]

[project.optional-dependencies]
game = [
  "customtkinter>=5.2.2"
]

[tool.coverage.run]
source = ["sssnake"]
omit = ["sssnake/game/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
extend-select = ["I","B","C90"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = false